--- a/IN451_Unit2.Web/appsettings.json
+++ b/IN451_Unit2.Web/appsettings.json
@@ -6,7 +6,7 @@
         }
     },
     "ConnectionStrings": {
-        "DefaultConnection": "Server=JON\\SQLEXPRESS;Database=Northwind;Integrated Security=True;MultipleActiveResultSets=true;TrustServerCertificate=true"
+        "DefaultConnection": "Server=ServerName;Database=Northwind;Integrated Security=True;MultipleActiveResultSets=true;TrustServerCertificate=true"
     },
   "AllowedHosts": "*"
 }
