--- a/IN451_Unit2.Web/IN451_Unit2.Web.csproj
+++ b/IN451_Unit2.Web/IN451_Unit2.Web.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.3.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Extensions" Version="2.3.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\IN451_Unit2.DataAccess\IN451_Unit2.DataAccess.csproj" />
     <ProjectReference Include="..\IN451_Unit2.Models\IN451_Unit2.Models.csproj" />
     <ProjectReference Include="..\IN451_Unit2.Services\IN451_Unit2.Services.csproj" />
